fix: remove horizontal scrollbar of the carousel

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,7 +74,7 @@ background-color: grey;
 
 .carousel {
   position: relative;
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 .carousel__container {
   overflow-x: hidden;
